--- a/الصفحه-الرئيسية/index.html
+++ b/الصفحه-الرئيسية/index.html
@@ -430,7 +430,7 @@
       abdulrahman adel
     </a> 
     | نسخة الموقع لدفعه 2026 &copy;
-    <a href="privacy.html" class="privacy-link" target="_blank" rel="noopener noreferrer" aria-label="صفحة سياسة الخصوصية">
+    <a href="privacy.html" class="https://www.mrfaisal.net/privacy.html" target="_blank" rel="noopener noreferrer" aria-label="صفحة سياسة الخصوصية">
       سياسة الخصوصية
     </a>
   </footer>
