--- a/contact.html
+++ b/contact.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <title>تواصل معنا</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <title>تواصل معنا مع نصائح</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body {
       background-color: #f4f0f8;
       font-family: 'Cairo', sans-serif;
       padding: 15px;
       margin: 0;
+      overflow-x: hidden;
     }
 
-    /* العنوان المعدل */
+    /* العنوان */
     .header-title {
       display: inline-flex;
       align-items: center;
@@ -28,6 +29,7 @@
       transform: translateY(30px);
       font-size: 20px;
       margin: 0 auto 20px;
+      max-width: fit-content;
     }
 
     .header-title img {
@@ -57,108 +59,199 @@
       50% { transform: scale(1.2); }
     }
 
-    /* حاوية الـ GIF */
-    .gif-container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-bottom: 10px;
-    }
-
+    /* الحاوية */
     .container {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 15px;
+      gap: 20px;
+      margin-bottom: 40px;
     }
 
+    /* كارت تواصل مستطيل بالعرض */
     .contact-card {
-      background: white;
-      border-radius: 15px;
-      width: 230px;
-      padding: 15px 15px 10px;
-      text-align: center;
-      box-shadow: 0 6px 15px rgba(0,0,0,0.1);
       position: relative;
-      animation: fadeInSlide 0.8s ease forwards;
+      width: 350px;
+      height: 170px;
+      border-radius: 20px;
+      overflow: hidden;
+      cursor: pointer;
+      box-shadow: 0 10px 20px rgba(0,0,0,0.15);
       opacity: 0;
-      transform: translateY(30px);
-      transition: transform 0.3s ease;
+      /* افتراضياً يبدأ خارج الشاشة يمين */
+      transform: translateX(100px) translateY(60px);
+      transition: transform 0.7s ease, opacity 0.7s ease, box-shadow 0.3s ease;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
+      padding: 15px 25px;
+      color: white;
+      font-weight: 700;
+      text-shadow: 0 2px 8px rgba(0,0,0,0.7);
+      background-position: center center;
+      background-size: 130% auto;
+      background-repeat: no-repeat;
+      border: 2px solid transparent;
+    }
+
+    /* للبطاقة التي تظهر من اليسار */
+    .contact-card.from-left {
+      transform: translateX(-100px) translateY(60px);
+    }
+
+    /* طبقة تعتيم على الصورة */
+    .contact-card::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: rgba(0, 0, 0, 0.5);
+      z-index: 0;
+      transition: background 0.3s ease;
+      border-radius: 20px;
     }
 
     .contact-card:hover {
-      transform: translateY(-5px);
+      transform: translateY(-8px) scale(1.03);
+      box-shadow: 0 15px 30px rgba(0,0,0,0.3);
+      border-color: #9c27b0;
+    }
+    .contact-card:hover::before {
+      background: rgba(0, 0, 0, 0.6);
     }
 
-    .icon {
-      width: 60px;
-      height: 60px;
-      margin: 10px auto;
-      animation: floatIcon 2.5s ease-in-out infinite;
-      border-radius: 50%;
+    /* محتوى الكارت */
+    .content-wrapper {
+      position: relative;
+      z-index: 1;
+      text-align: center;
+      flex-grow: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      gap: 5px;
     }
 
     .name {
-      font-size: 16px;
-      font-weight: bold;
-      margin-bottom: 5px;
+      font-size: 22px;
+      margin-bottom: 3px;
     }
 
     .subject {
-      font-size: 14px;
-      color: #666;
+      font-size: 17px;
+      font-weight: 500;
       margin-bottom: 10px;
     }
 
     .whatsapp-button {
       display: inline-flex;
       align-items: center;
+      justify-content: center;
       background-color: #25D366;
       color: white;
-      padding: 6px 10px;
-      border-radius: 6px;
+      padding: 10px 18px;
+      border-radius: 30px;
       text-decoration: none;
-      font-size: 14px;
-      animation: pulseBtn 2.5s ease-in-out infinite;
+      font-size: 16px;
+      font-weight: 700;
+      box-shadow: 0 5px 15px rgba(37, 211, 102, 0.7);
+      transition: background-color 0.3s ease;
+      user-select: none;
+      gap: 8px;
+      margin: 0 auto;
+      width: fit-content;
+      min-width: 140px;
+    }
+
+    .whatsapp-button:hover {
+      background-color: #1ebe57;
     }
 
     .whatsapp-button img {
-      margin-left: 6px;
+      width: 22px;
+      height: 22px;
     }
 
     .note-top {
       position: absolute;
-      top: 5px;
-      right: 5px;
+      top: 15px;
+      left: 15px;
       background-color: #e91e63;
       color: white;
       font-size: 12px;
-      padding: 3px 8px;
-      border-radius: 8px;
+      padding: 6px 12px;
+      border-radius: 20px;
+      font-weight: 600;
+      box-shadow: 0 2px 8px rgba(233, 30, 99, 0.6);
+      user-select: none;
+      z-index: 2;
+      max-width: 85%;
+      text-align: center;
+      line-height: 1.2;
     }
 
-    @keyframes floatIcon {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-6px); }
+    /* ظهور الكارت (تتحرك لموضعها الطبيعي مع شفافية) */
+    .contact-card.show {
+      opacity: 1;
+      transform: translateX(0) translateY(0);
+      transition: opacity 0.7s ease, transform 0.7s ease;
     }
 
-    @keyframes fadeInSlide {
-      0% { opacity: 0; transform: translateY(30px); }
-      100% { opacity: 1; transform: translateY(0); }
+    /* نصائح - ورقة */
+    .tips-container {
+      max-width: 700px;
+      margin: 0 auto 50px auto;
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      padding: 0 15px;
     }
 
-    @keyframes pulseBtn {
-      0%, 100% { transform: scale(1); }
-      50% { transform: scale(1.05); }
+    .tip {
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+      padding: 15px 20px;
+      font-size: 16px;
+      color: #333;
+      opacity: 0;
+      transform: translateY(30px);
+      transition: opacity 0.7s ease, transform 0.7s ease;
+      user-select: none;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+
+    .tip.show {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+    /* ايموجي */
+    .tip .emoji {
+      font-size: 22px;
     }
 
     /* موبايل */
-    @media (max-width: 500px) {
+    @media (max-width: 600px) {
       .contact-card {
         width: 90%;
+        height: 160px;
+        background-size: 140% auto;
       }
-      .header-title {
+      .name {
         font-size: 18px;
+      }
+      .subject {
+        font-size: 14px;
+      }
+      .whatsapp-button {
+        font-size: 14px;
+        padding: 8px 16px;
+        min-width: 130px;
+      }
+      .tips-container {
+        max-width: 100%;
       }
     }
   </style>
@@ -166,7 +259,7 @@
 <body>
 
 <!-- GIF -->
-<div class="gif-container">
+<div class="gif-container" style="display:flex; justify-content:center; margin-bottom:20px;">
   <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.6.2/dist/dotlottie-wc.js" type="module"></script>
   <dotlottie-wc src="https://lottie.host/06e99f44-ec18-4512-ad5a-0e81ffcaa640/paKTlRDkFS.lottie" style="width: 250px; height: 250px" speed="1" autoplay loop></dotlottie-wc>
 </div>
@@ -174,94 +267,140 @@
 <!-- عنوان متحرك تحت الـ GIF -->
 <div class="header-wrapper">
   <div class="header-title">
-    <img src="https://img.icons8.com/ios-filled/50/ffffff/chat--v1.png" alt="دردشة">
-    تواصل مع فريقنا
+    <img src="https://img.icons8.com/ios-filled/50/ffffff/chat--v1.png" alt="دردشة" />
+    تواصل مع فريقنا نحن هنا لمساعدتك
   </div>
 </div>
 
 <div class="container">
 
-  <!-- مستر عارف -->
-  <div class="contact-card">
-    <img src="https://img.icons8.com/color/96/administrator-male.png" class="icon" alt="مستر عارف">
-    <div class="name">مستر عارف</div>
-    <div class="subject">مادة علمية</div>
-    <a href="https://wa.me/201276814042?text=ازيك%20يا%20مستر%20عارف" target="_blank" class="whatsapp-button">
-      <img src="https://img.icons8.com/ios-filled/20/ffffff/whatsapp.png"/> تواصل واتساب
-    </a>
+  <!-- الكروت: نضيف class from-left بالتناوب -->
+  <div class="contact-card" style="background-image: url('https://files.catbox.moe/qxdnr0.png');">
+    <div class="content-wrapper">
+      <div class="name"> مستر محمد عارف</div>
+      <div class="subject">مادة علمية</div>
+      <a href="https://wa.me/201276814042?text=ازيك%20يا%20مستر%20محمد%20عارف" target="_blank" class="whatsapp-button">
+        تواصل واتساب
+        <img src="https://img.icons8.com/ios-filled/20/ffffff/whatsapp.png" alt="واتساب" />
+      </a>
+    </div>
   </div>
 
-  <!-- مستر عبدالله -->
-  <div class="contact-card">
-    <img src="https://img.icons8.com/color/96/businessman.png" class="icon" alt="مستر عبدالله">
-    <div class="name">مستر عبدالله</div>
-    <div class="subject">مادة علمية</div>
-    <a href="https://wa.me/201276814042?text=ازيك%20يا%20مستر%20عبدالله" target="_blank" class="whatsapp-button">
-      <img src="https://img.icons8.com/ios-filled/20/ffffff/whatsapp.png"/> تواصل واتساب
-    </a>
+  <div class="contact-card from-left" style="background-image: url('https://files.catbox.moe/af5o2n.png');">
+    <div class="content-wrapper">
+      <div class="name"> مستر عبدالله</div>
+      <div class="subject">مادة علمية</div>
+      <a href="https://wa.me/201276814042?text=ازيك%20يا%20مستر%20عبدالله" target="_blank" class="whatsapp-button">
+        تواصل واتساب
+        <img src="https://img.icons8.com/ios-filled/20/ffffff/whatsapp.png" alt="واتساب" />
+      </a>
+    </div>
   </div>
 
-  <!-- ميس نهي -->
-  <div class="contact-card">
-    <img src="https://img.icons8.com/color/96/user-female-circle--v1.png" class="icon" alt="ميس نهي">
-    <div class="name">ميس نهي</div>
-    <div class="subject">مادة علمية</div>
-    <a href="https://wa.me/201276814042?text=ازيك%20يا%20ميس%20نهي" target="_blank" class="whatsapp-button">
-      <img src="https://img.icons8.com/ios-filled/20/ffffff/whatsapp.png"/> تواصل واتساب
-    </a>
+  <div class="contact-card" style="background-image: url('https://files.catbox.moe/c9902k.png');">
+    <div class="content-wrapper">
+      <div class="name">ميس نهي</div>
+      <div class="subject">مادة علمية</div>
+      <a href="https://wa.me/201276814042?text=ازيك%20يا%20ميس%20نهي" target="_blank" class="whatsapp-button">
+        تواصل واتساب
+        <img src="https://img.icons8.com/ios-filled/20/ffffff/whatsapp.png" alt="واتساب" />
+      </a>
+    </div>
   </div>
 
-  <!-- ميس أمنية -->
-  <div class="contact-card">
-    <img src="https://img.icons8.com/color/96/student-female.png" class="icon" alt="ميس أمنية">
-    <div class="name">ميس أمنية</div>
-    <div class="subject">مادة علمية</div>
-    <a href="https://wa.me/201276814042?text=ازيك%20يا%20ميس%20امنيه" target="_blank" class="whatsapp-button">
-      <img src="https://img.icons8.com/ios-filled/20/ffffff/whatsapp.png"/> تواصل واتساب
-    </a>
+  <div class="contact-card from-left" style="background-image: url('https://files.catbox.moe/7ftj3g.png');">
+    <div class="content-wrapper">
+      <div class="name"> ميس أمنية</div>
+      <div class="subject">مادة علمية</div>
+      <a href="https://wa.me/201276814042?text=ازيك%20يا%20ميس%20امنيه" target="_blank" class="whatsapp-button">
+        تواصل واتساب
+        <img src="https://img.icons8.com/ios-filled/20/ffffff/whatsapp.png" alt="واتساب" />
+      </a>
+    </div>
   </div>
 
-  <!-- ميس منار -->
-  <div class="contact-card">
-    <img src="https://img.icons8.com/color/96/user-female-circle--v2.png" class="icon" alt="ميس منار">
-    <div class="name">ميس منار</div>
-    <div class="subject">مادة علمية</div>
-    <a href="https://wa.me/201276814042?text=ازيك%20يا%20ميس%20منار" target="_blank" class="whatsapp-button">
-      <img src="https://img.icons8.com/ios-filled/20/ffffff/whatsapp.png"/> تواصل واتساب
-    </a>
+  <div class="contact-card" style="background-image: url('https://files.catbox.moe/7u3nis.png');">
+    <div class="content-wrapper">
+      <div class="name"> ميس منار</div>
+      <div class="subject">مادة علمية</div>
+      <a href="https://wa.me/201276814042?text=ازيك%20يا%20ميس%20منار" target="_blank" class="whatsapp-button">
+        تواصل واتساب
+        <img src="https://img.icons8.com/ios-filled/20/ffffff/whatsapp.png" alt="واتساب" />
+      </a>
+    </div>
   </div>
 
-  <!-- ميس سجدة -->
-  <div class="contact-card">
+  <div class="contact-card from-left" style="background-image: url('https://files.catbox.moe/5euias.png');">
     <div class="note-top">خاص بطلاب الأونلاين فقط</div>
-    <img src="https://img.icons8.com/color/96/technical-support--v2.png" class="icon" alt="ميس سجدة">
-    <div class="name">ميس سجدة</div>
-    <div class="subject">مادة علمية</div>
-    <a href="https://wa.me/201556618507?text=ازيك%20يا%20ميس%20سجدة" target="_blank" class="whatsapp-button">
-      <img src="https://img.icons8.com/ios-filled/20/ffffff/whatsapp.png"/> تواصل واتساب
-    </a>
+    <div class="content-wrapper">
+      <div class="name">ميس سجدة</div>
+      <div class="subject">مادة علمية</div>
+      <a href="https://wa.me/201556618507?text=ازيك%20يا%20ميس%20سجدة" target="_blank" class="whatsapp-button">
+        تواصل واتساب
+        <img src="https://img.icons8.com/ios-filled/20/ffffff/whatsapp.png" alt="واتساب" />
+      </a>
+    </div>
   </div>
 
-  <!-- استفسار -->
-  <div class="contact-card">
-    <img src="https://img.icons8.com/color/96/help.png" class="icon" alt="استفسار">
-    <div class="name">لدي استفسار</div>
-    <a href="https://wa.me/201276504341?text=لدي%20استفسار" target="_blank" class="whatsapp-button">
-      <img src="https://img.icons8.com/ios-filled/20/ffffff/whatsapp.png"/> تواصل واتساب
-    </a>
+  <div class="contact-card" style="background-image: url('https://files.catbox.moe/md9fso.png');">
+    <div class="content-wrapper">
+      <div class="name">تواصل مع فطومة</div>
+      <div class="subject">علاقات عامة</div>
+      <a href="https://wa.me/201556611570?text=ازيك%20يا%20فطومه" target="_blank" class="whatsapp-button">
+        تواصل واتساب
+        <img src="https://img.icons8.com/ios-filled/20/ffffff/whatsapp.png" alt="واتساب" />
+      </a>
+    </div>
   </div>
 
-  <!-- فطومة -->
-  <div class="contact-card">
-    <img src="https://img.icons8.com/color/96/businesswoman.png" class="icon" alt="فطومة">
-    <div class="name">فطومة</div>
-    <div class="subject">علاقات عامة</div>
-    <a href="https://wa.me/201556611570?text=ازيك%20يا%20فطومه" target="_blank" class="whatsapp-button">
-      <img src="https://img.icons8.com/ios-filled/20/ffffff/whatsapp.png"/> تواصل واتساب
-    </a>
+  <div class="contact-card from-left" style="background-image: url('https://files.catbox.moe/5euias.png');">
+    <div class="note-top" style="background-color: #2196f3; box-shadow: 0 2px 8px rgba(33, 150, 243, 0.6);">خاص بالاستفسارات</div>
+    <div class="content-wrapper">
+      <div class="name">خاص بالاستفسارات</div>
+      <a href="https://wa.me/201276504341?text=لدي%20استفسار" target="_blank" class="whatsapp-button">
+        تواصل واتساب
+        <img src="https://img.icons8.com/ios-filled/20/ffffff/whatsapp.png" alt="واتساب" />
+      </a>
+    </div>
   </div>
 
 </div>
+
+<!-- نصائح تعليمية -->
+<div class="tips-container">
+  <div class="tip"><span class="emoji">📚</span> احرص على مراجعة الدروس يوميًا لتحسين مستواك العلمي.</div>
+  <div class="tip"><span class="emoji">⏰</span> قسّم وقت الدراسة إلى فترات قصيرة مع استراحات منتظمة.</div>
+  <div class="tip"><span class="emoji">🧠</span> استخدم الخرائط الذهنية لتسهيل حفظ المعلومات.</div>
+  <div class="tip"><span class="emoji">👥</span> شارك في مجموعات الدراسة لتبادل المعلومات والاستفادة.</div>
+  <div class="tip"><span class="emoji">❓</span> لا تتردد في طرح الأسئلة عند عدم فهم أي نقطة في الدرس.</div>
+</div>
+
+<script>
+  // دالة مراقبة ظهور العناصر مع انيميشن متناوب بين من اليمين ومن اليسار
+  function createObserver(targets) {
+    const observer = new IntersectionObserver((entries) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add('show');
+          observer.unobserve(entry.target);
+        }
+      });
+    }, {threshold: 0.2});
+
+    targets.forEach((el, i) => {
+      // بالتناوب نضيف from-left للكارت الثاني والرابع وهكذا (مفروض في html تم إضافته بالفعل)
+      // بس لو حبيت تضيف برمجياً تقدر هنا:
+      // if(i % 2 === 1) el.classList.add('from-left');
+      observer.observe(el);
+    });
+  }
+
+  // مراقبة الكروت
+  createObserver(document.querySelectorAll('.contact-card'));
+
+  // مراقبة النصائح
+  createObserver(document.querySelectorAll('.tip'));
+</script>
 
 </body>
 </html>
