--- a/hdortanyasanwy.html
+++ b/hdortanyasanwy.html
@@ -153,6 +153,7 @@
               <p><strong>🧭 السنتر:</strong> ${data.geo}</p>
               <p><strong>📅الحصه الاولي:</strong> ${data.week1}</p>
               <p><strong>📅 الحصه التانيه:</strong> ${data.week2}</p>
+               <p><strong>📅 الحصه التانيه:</strong> ${data.week2}</p>
             </div>
           `;
         } else {
